// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomPageFields /> renders correctly with disabled 1`] = `
<FormSection
  className="custom-page-fields"
  component="div"
  name="custom"
>
  <Field
    component={[Function]}
    disabled={true}
    help={
      <FormattedMessage
        id="admin.help.metadescription"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        id="global.meta.description"
        values={Object {}}
      />
    }
    name="metadescription"
    type="text"
  />
  <Field
    component={[Function]}
    disabled={true}
    help={
      <FormattedMessage
        id="admin.help.customcode"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        id="admin.customcode"
        values={Object {}}
      />
    }
    name="customcode"
    placeholder="<script type=\\"text/javascript\\"> </script>\\""
    type="textarea"
  />
  <Field
    component={[Function]}
    disabled={true}
    label={
      <FormattedMessage
        id="admin.fields.page.cover"
        values={Object {}}
      />
    }
    name="picto"
    type="image"
  />
</FormSection>
`;

exports[`<CustomPageFields /> renders correctly with no props 1`] = `
<FormSection
  className="custom-page-fields"
  component="div"
  name="custom"
>
  <Field
    component={[Function]}
    disabled={false}
    help={
      <FormattedMessage
        id="admin.help.metadescription"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        id="global.meta.description"
        values={Object {}}
      />
    }
    name="metadescription"
    type="text"
  />
  <Field
    component={[Function]}
    disabled={false}
    help={
      <FormattedMessage
        id="admin.help.customcode"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        id="admin.customcode"
        values={Object {}}
      />
    }
    name="customcode"
    placeholder="<script type=\\"text/javascript\\"> </script>\\""
    type="textarea"
  />
</FormSection>
`;

exports[`<CustomPageFields /> renders correctly with picto 1`] = `
<FormSection
  className="custom-page-fields"
  component="div"
  name="custom"
>
  <Field
    component={[Function]}
    disabled={false}
    help={
      <FormattedMessage
        id="admin.help.metadescription"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        id="global.meta.description"
        values={Object {}}
      />
    }
    name="metadescription"
    type="text"
  />
  <Field
    component={[Function]}
    disabled={false}
    help={
      <FormattedMessage
        id="admin.help.customcode"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        id="admin.customcode"
        values={Object {}}
      />
    }
    name="customcode"
    placeholder="<script type=\\"text/javascript\\"> </script>\\""
    type="textarea"
  />
  <Field
    component={[Function]}
    disabled={false}
    label={
      <FormattedMessage
        id="admin.fields.page.cover"
        values={Object {}}
      />
    }
    name="picto"
    type="image"
  />
</FormSection>
`;
